add Google Analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <script type="text/javascript" src="google-code-prettify/prettify.js"></script>
     <title>Pumpkin Pi</title>
     <meta name="Description" content="A very easy beginners project to illuminate a Jack-o'Lantern using LEDs and Raspberry Pi.">
+
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-35905841-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    
   </head>
   <body onload="prettyPrint()">
     <div class="navbar">
